tests/negative/typecheck/cyclic.orng
// cyclic.orng:5:7: error: cyclic type detected
// type A = (B, Int)
//      ^
// 
type A = (B, Int)
type B = (A, Int)

fn main() -> Int {
    let x: A
    _ = x
    2
}